routine update from updating hugo

--- a/archmage-vainglory/index.html
+++ b/archmage-vainglory/index.html
@@ -16,9 +16,12 @@
 <p>Are you in the 1% of players that care about a difference between <code>22k</code> and <code>24k</code> DPS when farming on ArchMage?</p>
 <p>And if you are, do you happen to be in the other 1% to have wasted <abbr title="The 40,000 ACs package will give you a 68% chance of opening Acheron">$100</abbr> on Acheron?</p>
 
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="https://www.youtube.com/embed/uiU8FZBLkXA" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
-</div>
+
+    
+    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+      <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" loading="eager" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/uiU8FZBLkXA?autoplay=0&controls=1&end=0&loop=0&mute=0&start=0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" title="YouTube video"
+      ></iframe>
+    </div>
 
 <h1 id="mechanics">Mechanics</h1>
 <h2 id="acheron">Acheron</h2>
