--- a/boost-items/index.html
+++ b/boost-items/index.html
@@ -25,9 +25,9 @@ In particular, we will look into the interaction between the following boosts:</
 <p>I will be linking items as examples, but many of them have alternatives and variants.
 This article is meant to be an explanation, not a comprehensive list.</p>
 <figure><img src="/img/aqw/boostgifs/wave.gif"
-         alt="He will help us understand how damage boosts stack up."/><figcaption>
-            <h4>Meet our friendly Frostval Barbarian</h4><p>He will help us understand how damage boosts stack up.</p>
-        </figcaption>
+    alt="He will help us understand how damage boosts stack up."><figcaption>
+      <h4>Meet our friendly Frostval Barbarian</h4><p>He will help us understand how damage boosts stack up.</p>
+    </figcaption>
 </figure>
 
 <h1 id="additive-vs-multiplicative">Additive vs. Multiplicative</h1>
@@ -66,10 +66,10 @@ This results in a slightly higher number.</p>
 <li>the boosts from the above three damage categories stack <strong>multiplicatively</strong></li>
 </ul>
 <figure><img src="/img/aqw/boostgifs/ophid.gif"
-         alt="Before we begin, let&amp;rsquo;s notice how our friendly Frostval Barbarian hits for 400 damage in one strike without boosts.
-He&amp;rsquo;s using Doom Ophidian Blade, which deals the same damage every time. As a Frost Barb, he also doesn&amp;rsquo;t crit."/><figcaption>
-            <h4>Base Hit = 400</h4><p>Before we begin, let&rsquo;s notice how our friendly Frostval Barbarian hits for 400 damage in one strike without boosts.<br>He&rsquo;s using Doom Ophidian Blade, which deals the same damage every time. As a Frost Barb, he also doesn&rsquo;t crit.</p>
-        </figcaption>
+    alt="Before we begin, let&amp;rsquo;s notice how our friendly Frostval Barbarian hits for 400 damage in one strike without boosts.
+He&amp;rsquo;s using Doom Ophidian Blade, which deals the same damage every time. As a Frost Barb, he also doesn&amp;rsquo;t crit."><figcaption>
+      <h4>Base Hit = 400</h4><p>Before we begin, let&rsquo;s notice how our friendly Frostval Barbarian hits for 400 damage in one strike without boosts.<br>He&rsquo;s using Doom Ophidian Blade, which deals the same damage every time. As a Frost Barb, he also doesn&rsquo;t crit.</p>
+    </figcaption>
 </figure>
 
 <h1 id="xpcpgoldrep">XP/CP/Gold/REP</h1>
@@ -102,10 +102,10 @@ Here are the most important ones:</p>
 <li><a href="http://aqwwiki.wikidot.com/necrotic-sword-of-doom-sword">Necrotic Sword of Doom</a> +51%</li>
 </ul>
 <figure><img src="/img/aqw/boostgifs/apothe.gif"
-         alt="As we can see, our friend hits for 604 damage per strike.
-This is exactly what we&amp;rsquo;d expect by multiplying his base 400 hit by the 151% of Apotheosis."/><figcaption>
-            <h4>Apotheosis = 604</h4><p>As we can see, our friend hits for 604 damage per strike.<br>This is exactly what we&rsquo;d expect by multiplying his base 400 hit by the 151% of Apotheosis.</p>
-        </figcaption>
+    alt="As we can see, our friend hits for 604 damage per strike.
+This is exactly what we&amp;rsquo;d expect by multiplying his base 400 hit by the 151% of Apotheosis."><figcaption>
+      <h4>Apotheosis = 604</h4><p>As we can see, our friend hits for 604 damage per strike.<br>This is exactly what we&rsquo;d expect by multiplying his base 400 hit by the 151% of Apotheosis.</p>
+    </figcaption>
 </figure>
 
 <p>Many of these have reskins and dual-wield alternatives.
@@ -117,19 +117,19 @@ This is good because you can use different Enhancements on them.</p>
 <li><a href="http://aqwwiki.wikidot.com/empowered-bonfire-altar">Empowered Bonfire Altar</a> and <a href="http://aqwwiki.wikidot.com/nightmare-carnax-s-guardians">Nightmare Carnax&rsquo;s Guardians</a> +35%, same as AFDL, except in the cape slot</li>
 </ul>
 <figure><img src="/img/aqw/boostgifs/afdl.gif"
-         alt="Same calculation as before, just with a lower number. AFDL with its 35% boost results in 540 total damage.
-"/><figcaption>
-            <h4>AFDL = 540</h4><p>Same calculation as before, just with a lower number. AFDL with its 35% boost results in 540 total damage.<br></p>
-        </figcaption>
+    alt="Same calculation as before, just with a lower number. AFDL with its 35% boost results in 540 total damage.
+"><figcaption>
+      <h4>AFDL = 540</h4><p>Same calculation as before, just with a lower number. AFDL with its 35% boost results in 540 total damage.<br></p>
+    </figcaption>
 </figure>
 
 <p>As mentioned earlier, boosts <em>within the same category</em> don&rsquo;t stack, meaning if you&rsquo;re using <abbr title="ArchFiend DoomLord">AFDL</abbr>, then Burning Blade (of Abezeth) is useless to you.
 Apotheosis and NSoD, in turn, override your AFDL&rsquo;s damage boost with a higher one.</p>
 <figure><img src="/img/aqw/boostgifs/afdl%20apothe.gif"
-         alt="Our friend is displaying the fact that same-type boosts don&amp;rsquo;t stack
-The higher value of Apotheosis simply overrides AFDL&amp;rsquo;s boost."/><figcaption>
-            <h4>AFDL Apotheosis = 604</h4><p>Our friend is displaying the fact that same-type boosts don&rsquo;t stack<br>The higher value of Apotheosis simply overrides AFDL&rsquo;s boost.</p>
-        </figcaption>
+    alt="Our friend is displaying the fact that same-type boosts don&amp;rsquo;t stack
+The higher value of Apotheosis simply overrides AFDL&amp;rsquo;s boost."><figcaption>
+      <h4>AFDL Apotheosis = 604</h4><p>Our friend is displaying the fact that same-type boosts don&rsquo;t stack<br>The higher value of Apotheosis simply overrides AFDL&rsquo;s boost.</p>
+    </figcaption>
 </figure>
 
 <p>It&rsquo;s worth mentioning, that this form of boost also <span style="text-decoration: underline;">increases your healing</span>, not just your damage.
@@ -163,10 +163,10 @@ This is lower than the 75% of weapons, but they don&rsquo;t take up your weapon 
 <li>Chaos: <a href="http://aqwwiki.wikidot.com/empowered-drakath-armor">Empowered Drakath Armor</a> and <a href="http://aqwwiki.wikidot.com/hollowborn-envoy-of-chaos">Hollowborn Envoy of Chaos</a></li>
 </ul>
 <figure><img src="/img/aqw/boostgifs/champion.gif"
-         alt="Frostval Barbarian is kind and helpful, but he does prefer simpler numbers.
-Adding 50% to 400 is a simple operation he doesn&amp;rsquo;t mind calculating."/><figcaption>
-            <h4>Fire Champion = 600</h4><p>Frostval Barbarian is kind and helpful, but he does prefer simpler numbers.<br>Adding 50% to 400 is a simple operation he doesn&rsquo;t mind calculating.</p>
-        </figcaption>
+    alt="Frostval Barbarian is kind and helpful, but he does prefer simpler numbers.
+Adding 50% to 400 is a simple operation he doesn&amp;rsquo;t mind calculating."><figcaption>
+      <h4>Fire Champion = 600</h4><p>Frostval Barbarian is kind and helpful, but he does prefer simpler numbers.<br>Adding 50% to 400 is a simple operation he doesn&rsquo;t mind calculating.</p>
+    </figcaption>
 </figure>
 
 <p>Finally, there are items that give only a <span style="text-decoration: underline;">30%</span> boost, but they give it to <strong>all</strong> races instead of just one:</p>
@@ -175,26 +175,26 @@ Adding 50% to 400 is a simple operation he doesn&amp;rsquo;t mind calculating."/
 <li><a href="http://aqwwiki.wikidot.com/polly-roger">Polly Roger</a>, a pet</li>
 </ul>
 <figure><img src="/img/aqw/boostgifs/polly.gif"
-         alt="He has found a friend!
-Polly Roger increases his base damage by 30% against all monsters that have a race."/><figcaption>
-            <h4>Polly = 520</h4><p>He has found a friend!<br>Polly Roger increases his base damage by 30% against all monsters that have a race.</p>
-        </figcaption>
+    alt="He has found a friend!
+Polly Roger increases his base damage by 30% against all monsters that have a race."><figcaption>
+      <h4>Polly = 520</h4><p>He has found a friend!<br>Polly Roger increases his base damage by 30% against all monsters that have a race.</p>
+    </figcaption>
 </figure>
 
 <p>Each ratial boost is treated as its own category.
 Boosts against the same race can&rsquo;t stack, but they can coexist with boosts to other races.</p>
 <figure><img src="/img/aqw/boostgifs/polly%20champion.gif"
-         alt="One more case of the higher boost overriding the lower one.
-Polly Roger&amp;rsquo;s 30% is ignored in favor of applying the Fire Champion&amp;rsquo;s 50%."/><figcaption>
-            <h4>Fire Champion &#43; Polly = 600</h4><p>One more case of the higher boost overriding the lower one.<br>Polly Roger&rsquo;s 30% is ignored in favor of applying the Fire Champion&rsquo;s 50%.</p>
-        </figcaption>
+    alt="One more case of the higher boost overriding the lower one.
+Polly Roger&amp;rsquo;s 30% is ignored in favor of applying the Fire Champion&amp;rsquo;s 50%."><figcaption>
+      <h4>Fire Champion &#43; Polly = 600</h4><p>One more case of the higher boost overriding the lower one.<br>Polly Roger&rsquo;s 30% is ignored in favor of applying the Fire Champion&rsquo;s 50%.</p>
+    </figcaption>
 </figure>
 
 <figure><img src="/img/aqw/boostgifs/chaos.gif"
-         alt="A not obvious edge case.
-Though Drakath&amp;rsquo;s armor overrides Polly&amp;rsquo;s Chaos boost, Our feathery friend&amp;rsquo;s boost against dragons still applies."/><figcaption>
-            <h4>Chaos Armor &#43; Polly = 520</h4><p>A not obvious edge case.<br>Though Drakath&rsquo;s armor overrides Polly&rsquo;s Chaos boost, Our feathery friend&rsquo;s boost against dragons still applies.</p>
-        </figcaption>
+    alt="A not obvious edge case.
+Though Drakath&amp;rsquo;s armor overrides Polly&amp;rsquo;s Chaos boost, Our feathery friend&amp;rsquo;s boost against dragons still applies."><figcaption>
+      <h4>Chaos Armor &#43; Polly = 520</h4><p>A not obvious edge case.<br>Though Drakath&rsquo;s armor overrides Polly&rsquo;s Chaos boost, Our feathery friend&rsquo;s boost against dragons still applies.</p>
+    </figcaption>
 </figure>
 
 <h1 id="all-out">All Out</h1>
@@ -208,28 +208,28 @@ Though Drakath&amp;rsquo;s armor overrides Polly&amp;rsquo;s Chaos boost, Our fe
 <li><a href="http://aqwwiki.wikidot.com/potent-honor-potion">Honor Potions</a></li>
 </ul>
 <figure><img src="/img/aqw/boostgifs/honor.gif"
-         alt="As usual, we add the 75% boost from the Potent Honor Potion to our base 400 damage.
-400*175%=700."/><figcaption>
-            <h4>Potent Honor = 700</h4><p>As usual, we add the 75% boost from the Potent Honor Potion to our base 400 damage.<br>400*175%=700.</p>
-        </figcaption>
+    alt="As usual, we add the 75% boost from the Potent Honor Potion to our base 400 damage.
+400*175%=700."><figcaption>
+      <h4>Potent Honor = 700</h4><p>As usual, we add the 75% boost from the Potent Honor Potion to our base 400 damage.<br>400*175%=700.</p>
+    </figcaption>
 </figure>
 
 <h1 id="ideal-setup">Ideal Setup</h1>
 <p>First of all, let&rsquo;s make a calculation. Is it better to use an <span style="text-decoration: underline;">All-boost Weapon and a Racial Armor</span>, or a <span style="text-decoration: underline;">Racial Armor and an All-boost weapon</span>?</p>
 <p>Assuming the player is fighting Dragons, DragonBlade of Nulgath and ArchFiend DoomLoord give a total damage of <span style="text-decoration: underline;">175% * 135% = <strong>236%</strong></span></p>
 <figure><img src="/img/aqw/boostgifs/chaossword.gif"
-         alt="A weapon with a 75% boost, and an armor with 35%.
-That should be 236% of 400, which is 945."/><figcaption>
-            <h4>Chaos Greatsword = 945</h4><p>A weapon with a 75% boost, and an armor with 35%.<br>That should be 236% of 400, which is 945.</p>
-        </figcaption>
+    alt="A weapon with a 75% boost, and an armor with 35%.
+That should be 236% of 400, which is 945."><figcaption>
+      <h4>Chaos Greatsword = 945</h4><p>A weapon with a 75% boost, and an armor with 35%.<br>That should be 236% of 400, which is 945.</p>
+    </figcaption>
 </figure>
 
 <p>The alternative, NSoD and Fire Champion&rsquo;s Armor results in <span style="text-decoration: underline;">151% * 150% = <strong>226%</strong></span></p>
 <figure><img src="/img/aqw/boostgifs/champion%20apothe.gif"
-         alt="The calculations match the observations!
-Fire Champion&amp;rsquo;s 50% and Apotheosis&amp;rsquo; 51% multiply together to 226% total damage."/><figcaption>
-            <h4>Fire Champion &#43; Apotheosis = 906</h4><p>The calculations match the observations!<br>Fire Champion&rsquo;s 50% and Apotheosis&rsquo; 51% multiply together to 226% total damage.</p>
-        </figcaption>
+    alt="The calculations match the observations!
+Fire Champion&amp;rsquo;s 50% and Apotheosis&amp;rsquo; 51% multiply together to 226% total damage."><figcaption>
+      <h4>Fire Champion &#43; Apotheosis = 906</h4><p>The calculations match the observations!<br>Fire Champion&rsquo;s 50% and Apotheosis&rsquo; 51% multiply together to 226% total damage.</p>
+    </figcaption>
 </figure>
 
 <p>As we can see, using the weapon associated with the given race results in marginally more damage.</p>
@@ -239,10 +239,10 @@ It also results in higher healing.</p>
 <p>From a setup like this, we can optionally switch to an racial armor to increase our boost from 30% to 50%.</p>
 <p>Alternatively, we can replace the NSoD with a racial weapon if we only care about damage and we don&rsquo;t mind the inconvenience. In this case, it&rsquo;s good to have an AFDL or equivalent equipped so that we retain a solid All-boost.</p>
 <figure><img src="/img/aqw/boostgifs/all.gif"
-         alt="151%*150%*175% = 3.96
-The math checks out. That&amp;rsquo;s a lot of damage!"/><figcaption>
-            <h4>Combined</h4><p>151%*150%*175% = 3.96<br>The math checks out. That&rsquo;s a lot of damage!</p>
-        </figcaption>
+    alt="151%*150%*175% = 3.96
+The math checks out. That&amp;rsquo;s a lot of damage!"><figcaption>
+      <h4>Combined</h4><p>151%*150%*175% = 3.96<br>The math checks out. That&rsquo;s a lot of damage!</p>
+    </figcaption>
 </figure>
 
 <p>For both of these, we want to have an Awescended set item or equivalent for the constantly on reward boost.</p>
