--- a/malgor/index.html
+++ b/malgor/index.html
@@ -28,9 +28,12 @@ A Speaker is a more evolved form of a Mumbler, one of these:</p>
 <p>Beating Malgor requires 4 players working as a team.
 Even one player messing up can cause the whole team to wipe, so make sure that your entire team is familiar with the strategy.</p>
 
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="https://www.youtube.com/embed/Q1yFXr_Fpq8" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
-</div>
+
+    
+    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+      <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" loading="eager" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Q1yFXr_Fpq8?autoplay=0&controls=1&end=0&loop=0&mute=0&start=0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" title="YouTube video"
+      ></iframe>
+    </div>
 
 <h1 id="what-to-prepare">What To Prepare</h1>
 <p>Before we begin, it&rsquo;s good knowing that Malgor <strong>does not get harder</strong> as the fight goes on.
